src/objects/Survey_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Survey Campaigns</relationshipLabel>
        <relationshipName>Survey_Campaigns</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SendSurveyCompleteTimestamp__c</fullName>
        <label>Send Survey Complete Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Campaigns</relationshipLabel>
        <relationshipName>Survey_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Campaign</label>
    <nameField>
        <displayFormat>QSC-{000}</displayFormat>
        <label>Survey Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>